infra-temp-6/_AWS_Terragrunt/infra-live-v3/dev/vpc/.terragrunt-cache/88RysKboHAc9DT0kPbA_dFfIslM/4SrSmFsD_9xmHa9VmgTh4IKg6YU/01-VPC.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block
  
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "dev-main"
  }
}
