infra-temp-6/_AWS_Terragrunt/infra-live-v3/dev/vpc/.terragrunt-cache/88RysKboHAc9DT0kPbA_dFfIslM/4SrSmFsD_9xmHa9VmgTh4IKg6YU/02-IGW.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "dev-igw"
  }
}
