infra-temp-6/_AWS_Terragrunt/infra-live-v3/dev/vpc/.terragrunt-cache/88RysKboHAc9DT0kPbA_dFfIslM/4SrSmFsD_9xmHa9VmgTh4IKg6YU/04-NAT.tf
resource "aws_eip" "nat" {

  tags = {
    Name = "${var.env}-nat"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id

  tags = {
    Name = "${var.env}-nat"
  }

  depends_on = [ aws_internet_gateway.igw ]
}
