infra-temp-6/_AWS_Terragrunt/infra-live-v3/dev/vpc/.terragrunt-cache/88RysKboHAc9DT0kPbA_dFfIslM/4SrSmFsD_9xmHa9VmgTh4IKg6YU/05-RT.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.env}-public"
  }
}

# Public RT Assoc.(s)
resource "aws_route_table_association" "public" {
  count = length(var.public_subnets)
  
  subnet_id = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# Private RT
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "${var.env}-private"
  }
}

# Private RT Assoc.(s)
resource "aws_route_table_association" "private" {
  count = length(var.private_subnets)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
